Installation de MongoDB, mise en place du formulaire sous Milligram

--- a/www/index.html
+++ b/www/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
     <title>Test</title>
 </head>
 <body>
-    
+    <h1>Todo</h1>
+    <form name="todo">
+        <input type="text" name="tache" placeholder="Ecrivez votre tâche"/>
+        <input type="submit" value="Envoyer" />
+    </form>
 </body>
 </html>
